--- a/MobileTerminalDemo.html
+++ b/MobileTerminalDemo.html
@@ -30,7 +30,7 @@
 	var submit = document.getElementById('submit')
 	submit.addEventListener("touchstart",submitForm)
 	function submitForm(event) {
-		submit.innerHTML =  "You touched me " + event.touches.length + " times"
+		submit.innerHTML =  "Touched Points is" + event.touches.length
 	}
 </script>
 </html>
